<resources>
    <string name="app_name">Voice Recorder</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="cancel">Cancel</string>
    <string name="decay">Decays</string>
    <string name="delay">Delays</string>
    <string name="Email">info@inventics.tech</string>
    <string name="delaytime">Delay Time</string>
    <string name="delete">Delete</string>
    <string name="discard_btn">Discard</string>
    <string name="discard_msg">Discard audio? Your audio will not be saved</string>
    <string name="discard_rec">Discard recording? Your recording will be discarded</string>
    <string name="dlg_confm_title">Confirmation</string>
    <string name="dlg_delete_msg">Are you sure you want to delete this?</string>
    <string name="emptymsg">Recording List is Empty.</string>
    <string name="error_ffmpeg">Ffmpeg not supported in this device</string>
    <string name="error_file_exist">Filename already exists.</string>
    <string name="error_filename">Please Enter File Name</string>
    <string name="error_name">Please Enter Your Name</string>
    <string name="error_no_ringtone">No Ringtone Yet,\nClick on Plus button to create new.</string>
    <string name="error_share">Save this ringtone First.</string>
    <string name="error_text">Please Enter Some Text.</string>
    <string name="in_gain">In Gain</string>
    <string name="later">Later</string>
    <string name="menu_share_link">https://play.google.com/store/apps/details?id=</string>
    <string name="music_path_empty">Any one music path is Empty here.\n Please add music path and Try again.</string>
    <string name="newx">New</string>
    <string name="now">OK</string>
    <string name="ok">OK</string>
    <string name="out_gain">Out Gain</string>
    <string name="permission_msg">Access to system permission is required to set ringtone.</string>
    <string name="policy_url">https://inventics.tech/privacy-policy</string>
    <string name="rate">Enjoying our App?</string>
    <string name="rate_msg">Then how about rating\nus on the PlayStore?</string>
    <string name="rec_name">Recording Name</string>
    <string name="record_audio">Record Audio</string>
    <string name="recorded_audio">Recorded Audio</string>
    <string name="recording_list">Recording List</string>
    <string name="rename">Rename</string>
    <string name="replay">Replay</string>
    <string name="reset">Reset</string>
    <string name="ringi_info_setalarmtoast">  is set as your default Alarm Tone</string>
    <string name="ringi_info_setnotifitoast">  is set as your default Notification Tone</string>
    <string name="ringi_info_setringtoast">  is set as your default Ringtone</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop">Stop</string>
    <string name="success_contact_ring">has been set to</string>
    <string name="success_file_delete">Ringtone deleted successfully.</string>
    <string name="success_file_save">Ringtone saved successfully.</string>
    <string name="success_ring_set">Ringtone has been set.</string>
    <string name="sys_permission">Permission Required</string>
    <string name="time">00:00</string>
    <string name="voice_recorder">Voice Recorder</string>

    <string name="save">Save</string>

    <!--admob ids-->
    <string name="admob_app_id">ca-app-pub-3588931490344352~4505660489</string>


</resources>
